--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
                   <button class="btn bg-bike-primary text-white">Purchase</button>
                 </div>
                 <div class="flex-1">
-                    <img src="/images/slider/bike1.png" class="w-[400px]" />
+                    <img src="images/slider/bike1.png" class="w-[400px]" />
                 </div>
              </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -106,7 +106,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
                       <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike2.png" class="w-[400px]" />
+                        <img src="images/slider/bike2.png" class="w-[400px]" />
                     </div>
                  </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -130,7 +130,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
                       <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike3.png" class="w-[400px]" />
+                        <img src="images/slider/bike3.png" class="w-[400px]" />
                     </div>
                  </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -154,7 +154,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
                       <button class="btn bg-bike-primary text-white">Purchase</button>
                     </div>
                     <div class="flex-1">
-                        <img src="/images/slider/bike4.png" class="w-[400px]" />
+                        <img src="images/slider/bike4.png" class="w-[400px]" />
                     </div>
                  </div>
               <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -214,7 +214,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
     <div class="grid gap-10 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
         <!-- first review -->
         <div class="card bg-base-100 p-9 border border-gray-400">
-            <figure><img class="w-36" src="/images/others/user-1.png" alt="Shoes" /></figure>
+            <figure><img class="w-36" src="images/others/user-1.png" alt="Shoes" /></figure>
             <div class="card-body">
               <p>Slate helps you see how 
                 many more days you need 
@@ -235,7 +235,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
           </div>
             <!-- second review -->
             <div class="card bg-base-100 p-9 border border-gray-400">
-                <figure><img class="w-36" src="/images/others/user-2.png" alt="Shoes" /></figure>
+                <figure><img class="w-36" src="images/others/user-2.png" alt="Shoes" /></figure>
                 <div class="card-body">
                   <p>Slate helps you see how 
                     many more days you need 
@@ -256,7 +256,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
           </div>
                     <!-- third review -->
                     <div class="card bg-base-100 p-9 border border-gray-400">
-                        <figure><img class="w-36" src="/images/others/user-3.png" alt="Shoes" /></figure>
+                        <figure><img class="w-36" src="images/others/user-3.png" alt="Shoes" /></figure>
                         <div class="card-body">
                           <p>Slate helps you see how 
                             many more days you need 
@@ -282,7 +282,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
         <h3 class="text-5xl mb-12 font-semibold text-center"> Frequently Asked <span class="text-bike-primary">Questions</span></h3>
         <div class="hero">
             <div class="hero-content flex-col lg:gap-24 lg:flex-row">
-              <img src="/images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
+              <img src="images/others/faq.png" class="w-3/4 lg:max-w-sm rounded-lg shadow-2xl" />
               <div>
                 <!-- first question -->
                 <div class="collapse collapse-arrow ">
