--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
         <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
             <!-- first card -->
             <div class="card card-compact bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+                <figure><img src="images/others/latest1.png" alt="Shoes" /></figure>
                 <div class="card-body">
                   <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -186,7 +186,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
               </div>
                      <!-- second card -->
             <div class="card card-compact bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+                <figure><img src="images/others/latest2.png" alt="Shoes" /></figure>
                 <div class="card-body">
                   <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -197,7 +197,7 @@ est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit molli
               </div>
                      <!-- third card -->
             <div class="card card-compact bg-base-100 shadow-xl">
-                <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+                <figure><img src="images/others/latest3.png" alt="Shoes" /></figure>
                 <div class="card-body">
                   <h2 class="card-title text-3xl">Ducati XDIAVEL S-73</h2>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
